--- a/public/GoodOrBad/index.html
+++ b/public/GoodOrBad/index.html
@@ -141,6 +141,12 @@
     .em2 {
       font-size: 2em !important;
     }
+    .em3 {
+      font-size: 3em !important;
+    }
+    .em4 {
+      font-size: 4em !important;
+    }
     th {
       font-size: 1.5em !important;
     }
@@ -251,12 +257,11 @@
 
     <!-- *************************** -->
     <section>
-      <h2>Making choices</h2>
-      <ul>
-        <li>Which framework to use</li>
-        <li>Which libraries to use</li>
-        <li>How code should be written</li>
-      </ul>
+      <div style="text-align: center !important;" class="em2"  >
+        Which framework to use<br/>
+        Which libraries to use<br/>
+        How code should be written<br/>
+      </div>
       <aside class="notes">
       </aside>
     </section>
@@ -296,10 +301,10 @@
 
     <!-- *************************** -->
     <section>
+      <div style="text-align: center !important;" >
+        <img src="/images/originalIpod.jpg" width="40%" />
+      </div>
 
-      <h2>What is this</h2>
-
-      <img src="/images/originalIpod.jpg" width="80%" />
       <aside class="notes">
         And what did people think about it at the time. Overpriced and too late.
       </aside>
@@ -319,14 +324,34 @@
       <aside class="notes">
         I pretty much had similar opinions when the iPod was launched. The market was saturated with MP3 players, and I thought that Apple might be able to sell a few iPods, but it wasn't obvious to me that it was going to be a great money maker.
 
-        iPod went on to sell 400 million units. There was something about the iPod that wasn't obviously great that made it sell lots.
+
       </aside>
     </section>
 
 
+
     <!-- *************************** -->
     <section>
-      <img src="/images/originalIphone.jpg" width="80%" />
+      <p class="em3" style="text-align: center !important;" ></p>
+
+      <div style="text-align: center !important;" class="em3"  >
+        400 million iPods sold
+      </div>
+
+
+      <aside class="notes">
+        <p>
+          iPod went on to sell 400 million units. There was something about the iPod that wasn't obviously great that made it sell lots.
+        </p>
+      </aside>
+    </section>
+
+    <!-- *************************** -->
+    <section>
+      <div style="text-align: center !important;" >
+        <img src="/images/originalIphone.jpg" width="75%" />
+      </div>
+
 
       <aside class="notes">
         <p>iPhone - anyone know what this is.</p>
@@ -344,16 +369,18 @@
 
       Steve Ballmer, Microsoft CEO, 30 April 2007
 
+      <!--
       <blockquote>
         We've learned and struggled for a few years here figuring out how to make a decent phone. PC guys are not going to just figure this out. They're not going to just walk in.</blockquote>
 
       Ed Colligan, Ex-Palm CEO, 16 Nov 2006
 
+
       <blockquote>
         I don't think that what we have seen so far (from Apple) is something that would any way necessitate us changing our thinking when it comes to openness, our software and business approach.</blockquote>
-
-
       Nokia chief executive Olli-Pekka Kallasvuo
+
+      -->
       <aside class="notes">
       </aside>
     </section>
@@ -362,7 +389,13 @@
 
     <!-- *************************** -->
     <section>
-      <p class="em3" style="text-align: center !important;" >1.2 billion iPhones sold<br/>$750 billion revenue</p>
+      <p class="em3" style="text-align: center !important;" ></p>
+
+      <div style="text-align: center !important;" class="em3"  >
+        1.2 billion iPhones sold<br/>
+        $750 billion revenue
+      </div>
+
 
       <aside class="notes">
         <p>
@@ -375,7 +408,7 @@
     <!-- *************************** -->
 
     <section>
-      <h2>Why I'm giving this talk.</h2>
+      <h2>Why this talk</h2>
       <p>
         Some still saw the iPhone as shit:
       </p>
@@ -401,6 +434,8 @@
 
         After the iPhone had launched and it was selling really well, people were still trying to argue that it was shit.
 
+        And it did have things that you could point at and say "this isn't very good"
+
         Some people people arguing that is wasn't a very good phone, and that it was only selling well for the "wrong" reasons.
 
         This is for a device that a _lot_ of people obviously liked.
@@ -412,7 +447,7 @@
 
     <!-- *************************** -->
     <section>
-      <div style="text-align: center !important;" class="fragment" >
+      <div style="text-align: center !important;" >
         <img src='/images/stop_liking_file.jpg' width="40%" />
       </div>
       <aside class="notes">
@@ -426,7 +461,7 @@
     <!-- *************************** -->
     <section>
       <h2></h2>
-      <div style="text-align: center !important;" class="fragment" >
+      <div style="text-align: center !important;" class="em2">
         If you think something is bad, but it's hugely popular, you're failing to tell good from bad.
       </div>
       <aside class="notes">
@@ -437,42 +472,37 @@
 
     <!-- *************************** -->
     <section>
-      <h2>Telling good from bad is hard is two separate ways</h2>
-      <p>
-        <b>Emotions</b>
-      </p>
-      <p>
-        <b>Math is hard</b>
-      </p>
-      <aside class="notes">
-      </aside>
-    </section>
 
-
-    <!-- *************************** -->
-    <section>
-      <div style="text-align: center !important;" class="fragment" >
-        <h2>Emotions</h2>
+      <div style="text-align: center !important;" class="em3">
+        Emotions
       </div>
 
 
+      <div style="text-align: center !important;" class="em3">
+        Math is hard
+      </div>
+
+
+
       <aside class="notes">
-        Programmers like to think of themselves as coldly logical and rational beings
+        Telling good from bad is hard is two separate ways
       </aside>
     </section>
 
 
     <!-- *************************** -->
     <section>
-      <h2></h2>
-      <div style="text-align: center !important;" class="fragment" >
+      <h2>Emotions</h2>
+      <div style="text-align: center !important;" >
         <img src="/images/Webscale.jpg" width="40%" />
-      </div>
-      <p>
+        <br/>
         http://www.mongodb-is-web-scale.com/
-      </p>
+      </div>
 
       <aside class="notes">
+
+
+        Programmers like to think of themselves as coldly logical and rational beings
 
         But we get bored of using current technology and want to start using new stuff.
 
@@ -498,8 +528,8 @@
     <!-- *************************** -->
     <section>
       <h2>Which of these is better</h2>
-      <p>Code that is easy to understand, has a good design, and is fully unit tested.</p>
-      <p>Code that is rough around the edges, is full of hacks and isn</p>
+      <p>Code that is easy to understand, has a good design, and has a good number unit tested.</p>
+      <p>Code that is rough around the edges, is full of hacks and isn't fully tested.</p>
       <aside class="notes">
         This is a not a question based on logic. Without information like cost, time taken, or number of bugs, you can't answer.
 
@@ -524,11 +554,15 @@
     <section>
       <h2>Aesthetics</h2>
 
-      <img src="/images/BeautifulMan.jpg" width="40%" />
+      <div style="text-align: center !important;"  >
+        <img src="/images/BeautifulMan.jpg" width="30%" />
 
-      <img src="/images/AttractiveWoman.jpg" width="40%" />
+        <img src="/images/AttractiveWoman.jpg" width="30%" />
 
-      <img src="/images/BeautySheep.jpg" width="40%" />
+        <img src="/images/BeautySheep.jpg" width="30%" />
+      </div>
+
+
       <aside class="notes">
         Humans instinctively find some things draw
 
@@ -540,7 +574,7 @@
     <!-- *************************** -->
     <section>
       <h2>Kintsugi</h2>
-      <div style="text-align: center !important;" class="fragment" >
+      <div style="text-align: center !important;" >
         <img src="/images/kintsugi_pot.jpg" width="40%" />
       </div>
 
@@ -561,13 +595,10 @@
     </section>
 
 
-
-
-
     <!-- *************************** -->
     <section>
       <h2>Wabi-sabi</h2>
-      <div style="text-align: center !important;" class="fragment" >
+      <div style="text-align: center !important;" >
         <img src="/images/RoughTeapot.jpg" width="40%" />
         <img src="/images/FancyTeapot.jpeg" width="40%" />
       </div>
@@ -624,8 +655,8 @@
     <!-- *************************** -->
     <section>
 
-      <div style="text-align: center !important;" class="fragment" >
-        <h2>Math is hard</h2>
+      <div style="text-align: center !important;" class="em4">
+        Math is hard
       </div>
       <aside class="notes">
         So the other main cause of people not being able to tell the difference between good and bad is that math is hard.
@@ -634,19 +665,20 @@
 
         Counting up numbers in your hard is really, really, really hard.
 
-        Humans can cope with numbers
+        Humans can cope with reasonable numbers like 1 or 2. But start to struggle with big numbers like 4 or 5.
+
+        And our brains just completely fail to process ridiculously large numbers like 20,000.
       </aside>
     </section>
 
 
-
     <!-- *************************** -->
     <section>
-      <h2></h2>
-      <div style="text-align: center !important;" class="fragment" >
-        <img src="/images/ManagementExpenses.png" width="40%" />
+      <div style="text-align: center !important;" >
+        <img src="/images/ManagementExpenses.png" width="50%" />
+        https://twitter.com/farbodsaraf/status/923353731948863489
       </div>
-      <p>https://twitter.com/farbodsaraf/status/923353731948863489</p>
+
 
       <aside class="notes">
       </aside>
@@ -654,20 +686,21 @@
 
     <!-- *************************** -->
     <section>
-      <div style="text-align: center !important;" class="fragment" >
-        <ul>
-          <li>We overvalue features</li>
-          <li>We undervalue ease of use.</li>
-        </ul>
+      <div style="text-align: center !important;" class="em3">
+          We overvalue features. <br/>
+          We undervalue ease of use.
       </div>
       <aside class="notes">
+
+        A feature is either there or isn't. zero or one - our brain can cope with that number
+
+
+        If something will affects you hundreds of times over the course of a project, your brain just can't cope with this mythical 'hundreds' number and just tunes it out.
+
+
         Being bad at maths leads to two problems in telling the difference between good and bad
       </aside>
     </section>
-
-
-
-
 
 
 
@@ -710,14 +743,11 @@
 
     <!-- *************************** -->
     <section>
-      <p class="em3" style="text-align: center !important;" >Did you read it?</p>
-      <p class="em3" style="text-align: center !important;" >Yes, I read it.</p>
 
-      <div style="text-align: center !important;" class="fragment" >
-        <img src="/images/funny-rage-face.jpg" width="40%" />
-      </div>
+      <blockquote class="em2">English can be understood through tough thorough thought though.</blockquote>
+      <blockquote class="em2">Did you read it?<br/>
+      Yes, I read it.</blockquote>
 
-      <blockquote>English can be understood through tough thorough thought though.</blockquote>
 
 
 
@@ -729,6 +759,21 @@
 
       </aside>
     </section>
+
+
+    <!-- *************************** -->
+    <!--
+    <section>
+      <section style="width: 100%; text-align: center !important;">
+        <img src="/images/lolitokei.png" width="75%" />
+      </section>
+
+      <aside class="notes">
+      </aside>
+    </section>
+
+    -->
+
 
 
     <!-- *************************** -->
@@ -750,6 +795,31 @@
       <aside class="notes">
       </aside>
     </section>
+
+
+    <!-- *************************** -->
+    <section>
+
+      <div style="text-align: center !important;" class="em2">
+
+          PHP keeps old bugs around <br/><br/>
+
+
+
+        English keeps old spellings around e.g. won't, cholmondeley
+      </div>
+
+
+      <aside class="notes">
+
+        Abbreviations use apo
+
+      </aside>
+    </section>
+
+
+
+
 
     <!-- *************************** -->
     <section>
@@ -811,7 +881,7 @@
 
     <!-- *************************** -->
     <section>
-      <div style="text-align: center !important;" >
+      <div style="text-align: center !important;" class="em3">
         Neither PHP or English are widely used.
       </div>
 
@@ -825,17 +895,35 @@
 
     <!-- *************************** -->
     <section>
-      <div style="text-align: center !important;" class="fragment" >
+      <div style="text-align: center !important;" class="em2">
         80% of the web powered by PHP
       </div>
 
-      <div style="text-align: center !important;" class="fragment" >
+      <div style="height: 100px">&nbsp;</div>
+
+      <div style="text-align: center !important;" class="em2">
         1.5 billion people speak English, and it's the language used for business worldwide.
       </div>
+
+
+
       <aside class="notes">
         If you think something is bad, but it's hugely popular, you're failing to tell good from bad.
 
         So, lets look at those things that made other languages good, and made both PHP and English be bad.
+      </aside>
+    </section>
+
+
+    <!-- *************************** -->
+    <section>
+      <h2></h2>
+      <div style="text-align: center !important;" class="em2">
+        If you think something is bad, but it's hugely popular, you're failing to tell good from bad.
+      </div>
+      <aside class="notes">
+        If you don't take away anything else from this talk, take this away.
+        (and it's you that has the problem.....it's not the case that apple fanboys are making the wrong decisions).
       </aside>
     </section>
 
@@ -867,8 +955,8 @@
     <!-- *************************** -->
     <section>
       <h2>Formal / polite</h2>
-      <div style="text-align: center !important;" class="fragment" >
-        <img src="/images/ManagementExpenses.png" width="40%" />
+      <div style="text-align: center !important;" >
+        <img src="/images/KoreaAir.png" width="30%" />
       </div>
 
 
@@ -913,17 +1001,27 @@
 
     <!-- *************************** -->
     <section>
-      <h2>Lack of consistency</h2>
-      <div style="text-align: center !important;" class="fragment" >
-        Easier to adopt new ideas.
+      <h2></h2>
+      <div style="text-align: center !important;" class="em2" >
+
+        Lack of consistency<br/><br/>
+
+        Easier to adopt new ideas. <br/>
 
         Easier to grow and adapt.
       </div>
 
-      <p>
+      <div style="height: 200px">&nbsp;</div>
+
+      <div style="text-align: center !important;" >
+
+
         https://en.wikipedia.org/wiki/List_of_language_regulators
         https://www.goethe.de/en/spr/mag/20802137.html
-      </p>
+
+
+
+      </div>
 
 
       <aside class="notes">
@@ -1170,7 +1268,7 @@ r.class  # => Rational</code>
 
     <!-- *************************** -->
     <section>
-      <h2>Why was the iPhone so success (initially at least)?</h2>
+      <h2>Why was the iPhone so successful?</h2>
 
       <ul>
         <li>Left features out - no copy paste, no MMS
@@ -1200,7 +1298,7 @@ r.class  # => Rational</code>
 
     <!-- *************************** -->
     <section>
-      <h1>So what can you do?</h1>
+      <h1>Getting better at telling good from bad</h1>
 
       <ul>
         <li>Recognise your own emotions.</li>
@@ -1226,8 +1324,8 @@ r.class  # => Rational</code>
       <h1>Be prepared to be wrong.</h1>
       <ul>
         <li>Decouple your code</li>
-        <li>Don't make functions be 600 lines wrong</li>
-        <li>Spend less time making decisions.</li>
+        <li>Write tests</li>
+        <li>Spend less time thinking deciding between good or bad</li>
       </ul>
 
       <aside class="notes">
@@ -1237,12 +1335,13 @@ r.class  # => Rational</code>
 
         a good way to measure this is to keep asking - if we removed this library how much of the other code would we need to alter - aka I fucking hate active record/eloquent.
 
+        If you're not good at something, spend less time doing it.
 
         Spend less time making decisions. Which of the following scenarios is likely to have the best result for the
 
         i) A committee of 5 people spend a week choosing which library to use.
-        ii) A single person spends 5 weeks choosing choose which library to use.
-        iii) You spend 5 minutes choosing which library to use, and then spend the next week trying to use it......then finding out what it wrong with it, and realising that what you need from that library is quite different from what you thought was important.
+        ii) A single person spends 5 weeks choosing which library to use.
+        iii) A single person spend 5 minutes choosing which library to use, and then spending the next 5 weeks trying it out......then finding out what it wrong with it, and realising that what you need from that library is quite different from what you thought was important.
 
       </aside>
     </section>
@@ -1265,6 +1364,11 @@ r.class  # => Rational</code>
     <section>
       <h1 class="finale">Fin</h1>
       <div style="min-height: 100px">&nbsp;</div>
+
+      <div style="text-align: center !important;"  >
+        <a href="https://joind.in/talk/00de7">https://joind.in/talk/00de7</a>
+      </div>
+
     </section>
 
     <!-- *************************** -->
