--- a/public/GoodOrBad/index.html
+++ b/public/GoodOrBad/index.html
@@ -246,7 +246,6 @@
         Being a programmer is mostly
       </h1>
       <ul>
-
         <li>Drinking coffee</li>
         <li>Googling answers on stackoverflow</li>
         <li>Making choices</li>
@@ -287,7 +286,12 @@
     <!-- *************************** -->
     <section>
 
-      <h2>What is good? What is bad?</h2>
+      <div style="text-align: center !important;" class="em3">
+        What is good?
+        <br/>
+        <br/>
+        What is bad?
+      </div>
 
       <aside class="notes">
         <p>
@@ -440,7 +444,7 @@
 
         This is for a device that a _lot_ of people obviously liked.
 
-        And they weren't that calm about their dislike
+        And they weren't that calm about their dislike.
 
       </aside>
     </section>
@@ -451,7 +455,7 @@
         <img src='/images/stop_liking_file.jpg' width="40%" />
       </div>
       <aside class="notes">
-        These people who thought Android phones should be selling better were actually getting quite angry a lot of the time,
+        These people who thought Android phones should be selling better were actually getting quite angry a lot of the time.
 
         (and it's you that has the problem.....it's not the case that apple fanboys are making the wrong decisions).
       </aside>
@@ -748,9 +752,6 @@
       <blockquote class="em2">Did you read it?<br/>
       Yes, I read it.</blockquote>
 
-
-
-
       <aside class="notes">
         English has a hilariously inconsistent. Other languages are much more consistent internally. A lot of this is due to English having taken ideas from other languages
 
@@ -776,49 +777,39 @@
 
 
 
+
     <!-- *************************** -->
     <section>
-      <h2></h2>
 
       <blockquote>English has pursued other languages down alleyways to beat them unconscious and rifle their pockets for new vocabulary.</blockquote>
 
       <aside class="notes">
+
       </aside>
     </section>
+
 
 
     <!-- *************************** -->
     <section>
       <div style="text-align: center !important;" >
-        <img src="/images/PHPStandardLibrary.jpg" width="80%" />
+        <img src="/images/PHPStandardLibrary.jpg" width="60%" />
       </div>
       <aside class="notes">
+        PHP is the borg of computing languages.
       </aside>
     </section>
 
 
     <!-- *************************** -->
     <section>
-
       <div style="text-align: center !important;" class="em2">
-
-          PHP keeps old bugs around <br/><br/>
-
-
-
-        English keeps old spellings around e.g. won't, cholmondeley
+        PHP keeps old bugs around <br/><br/>
+        English keeps old spellings around like<br/> "won't"<br/> "cholmondeley"<br/> "Featherstonhaugh"
       </div>
-
-
       <aside class="notes">
-
-        Abbreviations use apo
-
       </aside>
     </section>
-
-
-
 
 
     <!-- *************************** -->
@@ -832,32 +823,56 @@
 
         French has a feature. French has a feature where you can refer to someone formally with 'vous' or you can refer to them more informally with 'tu
 
-        Other languages, particularly Asian ones, have other 'polite' structures
+        This is great, it allows you to show that you're being polite! Right!
+
+        Features are great right? Having more features makes something better right?
 
         English doesn't have this feature. We used to have it, with the words 'thee' and 'thou' but they mostly fell out of use during the 1xth century, at least in part due to imported printing presses not having the letter 'thorn', but a y kind of looks like an off-centre thorn.
 
-
-        Features are great right? Having more features makes something better right?
       </aside>
     </section>
 
     <!-- *************************** -->
     <section>
-      <p>Other languages have deferential ways of talking</p>
 
-      <p>
-        Less, "Yo! You want water?"; and more, "It's a warm day for a nice refreshment, no?"
+      <div style="text-align: center !important;" class="em2">
+        Other languages have deferential ways of talking
+      </div>
 
-      <p>Some Asian languages have deferential ways of talking between people of different rank.</p>
+      <div style="height: 150px"></div>
+
+      <div style="text-align: center !important;" class="em2">
+        Less, "Yo! Get me a some water?"; and more, "It's a warm day for a nice refreshment, no?"
+      </div>
+
+      <aside class="notes">
+        <p>Some Asian languages have deferential ways of talking between people of different rank.</p>
+        <p>This is a feature that English lacks.</p>
+      </aside>
+    </section>
+
+
+    <!-- *************************** -->
+    <section>
+      <div style="text-align: center !important;" class="em3">
+        Java has a feature that PHP lacks: threads
+      </div>
+
+      <aside class="notes">
+        <p>It's a great feature - it allows you to write code that pulls data from different sources at once really easily.</p>
+
+        <p>It's required for solving some problems in a way that is performant e.g. physics simulations.</p>
+        <p>I'm still remember at one company </p>
+      </aside>
 
     </section>
 
 
     <!-- *************************** -->
     <section>
-      <h1>
-        Ruby has a feature: Monkey-patching
-      </h1>
+      <div style="text-align: center !important;" class="em2">
+        Ruby has a feature that PHP lacks: Monkey-patching
+      </div>
 
       <blockquote>
         One of the most powerful aspects of Ruby is the ability to re-open any class and change it’s methods.
@@ -866,18 +881,12 @@
       </blockquote>
 
 
-
       <aside class="notes">
         Ruby has Monkey-patching where it's possible to alter fundamental behaviour of the language.
 
-        They added this to the language because they thought it would make things better
+        It's a really powerful feature, you can do really cool stuff with it!
       </aside>
     </section>
-
-
-
-
-
 
     <!-- *************************** -->
     <section>
@@ -887,10 +896,9 @@
 
 
       <aside class="notes">
-        So, because they are both terrible, neither are used anymore, having been replaced by better languages.
+        So, because they are both terrible and lack features, neither PHP or English are used anymore, having been replaced by better languages.
       </aside>
     </section>
-
 
 
     <!-- *************************** -->
@@ -904,8 +912,6 @@
       <div style="text-align: center !important;" class="em2">
         1.5 billion people speak English, and it's the language used for business worldwide.
       </div>
-
-
 
       <aside class="notes">
         If you think something is bad, but it's hugely popular, you're failing to tell good from bad.
@@ -926,6 +932,47 @@
         (and it's you that has the problem.....it's not the case that apple fanboys are making the wrong decisions).
       </aside>
     </section>
+
+
+
+    <!-- *************************** -->
+    <section>
+      <h2></h2>
+      <div style="text-align: center !important;" class="em2" >
+
+        Lack of consistency<br/><br/>
+
+        Easier to adopt new ideas. <br/>
+
+        Easier to grow and adapt.
+      </div>
+
+      <div style="height: 200px">&nbsp;</div>
+
+      <div style="text-align: center !important;" >
+        https://en.wikipedia.org/wiki/List_of_language_regulators
+        https://www.goethe.de/en/spr/mag/20802137.html
+      </div>
+
+
+      <aside class="notes">
+
+        The process for English acquiring a new word is "We'll have that. Thanks".
+
+        Most other languages have acadamies that discuss introducing new words after years of discussions, or spend decades changing spellings.
+
+        If nothing looks out of place, then adding new ideas doesn't make people feel surprised.
+
+        PHP started off as a purely procedural language.
+
+        Grew into classes.
+
+        Continues to grow organically.
+
+      </aside>
+    </section>
+
+
 
 
     <!-- *************************** -->
@@ -976,18 +1023,16 @@
 
       <h2>English - hard to give offense accidentally.</h2>
 
-      <p>With all due respect....</p>
+      <ul>
+        <li>With all due respect....</li>
+        <li>Thanks a bunch!</li>
+        <li>See you next Tuesday</li>
+      </ul>
 
-      <p>Thanks a bunch!</p>
-
-      <p>See you next Tuesday</p>
+      <p class="fragment em2">NEVER SAY THESE PHRASES</p>
 
       <aside class="notes">
-
         English almost doesn't have this feature - it's almost impossible to accidentally give offense to someone by using the wrong phrasing.
-
-
-        <p>NEVER SAY THESE THINGS</p>
 
         <p>This promotes a lot more honest conversation</p>
 
@@ -1001,62 +1046,15 @@
 
     <!-- *************************** -->
     <section>
-      <h2></h2>
-      <div style="text-align: center !important;" class="em2" >
+      <h2>PHP lacks threads</h2>
 
-        Lack of consistency<br/><br/>
-
-        Easier to adopt new ideas. <br/>
-
-        Easier to grow and adapt.
-      </div>
-
-      <div style="height: 200px">&nbsp;</div>
-
-      <div style="text-align: center !important;" >
-
-
-        https://en.wikipedia.org/wiki/List_of_language_regulators
-        https://www.goethe.de/en/spr/mag/20802137.html
-
-
-
-      </div>
+      <p>This means it's not possible to write programs that deadlock internally.</p>
 
 
       <aside class="notes">
-
-        The process for English acquiring a new word is "We'll have that. Thanks".
-
-        Most other languages have acadamies that discuss introducing new words after years of discussions, or spend decades changing spellings.
-
-        If nothing looks out of place, then adding new ideas doesn't make people feel surprised.
-
-        PHP started off as a purely procedural language.
-
-        Grew into classes.
-
-        Continues to grow organically.
-
-      </aside>
-    </section>
-
-
-
-
-
-
-    <!-- *************************** -->
-    <section>
-      <h2>PHP lacks features threading</h2>
-      <p>PHP lacks threads. This means it's not possible to write programs that deadlock internally.</p>
-      <aside class="notes">
-
         Missing features - programmers don't need to learn those features. More seriously,
 
         (However I would like generics, typed callables, typed scalars + maybe something easier async.)
-
-
       </aside>
     </section>
 
@@ -1064,7 +1062,7 @@
     <!-- *************************** -->
     <section>
       <h1>
-        Ruby has a feature: Monkey-patching
+        PHP lacks monkey-patching
       </h1>
       <pre class="danackCode em1_2" data-trim>
 <code class="php">
@@ -1081,19 +1079,24 @@ r.class  # => Rational</code>
         This is an example of monkey patching, where the basic maths operations have been changed.
 
         Sadly PHP lacks this feature, and we're forced to have deterministic behaviour of basic maths operations.
+
+        This makes the day-to-day life of a PHP programmer much easier....
+
       </aside>
     </section>
 
 
     <!-- *************************** -->
     <section>
-      <h2></h2>
+      <div style="text-align: center !important;" class="em2" >
+        Features generally make things harder to use
+      </div>
 
-      <ul>
-        <li>Features generally make things harder to use</li>
-        <li>things that affect everyday use accumulate, but that involve big numbers</li>
-      </ul>
+      <div style="height: 150px"></div>
 
+      <div style="text-align: center !important;" class="em2" >
+        Things that affect everyday use accumulate, but that involve big numbers
+      </div>
 
       <aside class="notes">
       </aside>
