--- a/public/GoodOrBad/index.html
+++ b/public/GoodOrBad/index.html
@@ -269,13 +269,12 @@
 
     <!-- *************************** -->
     <section>
+      <div style="text-align: center !important;" class="em1_4"  >
+        Which frameworks are good, and which are bad.<br/>
+        Which libraries are good, and which are bad.<br/>
+        What code would be good, and what would be bad.<br/>
+      </div>
 
-      <h2>Making choices</h2>
-      <ul>
-        <li>Which frameworks are good, and which are bad.</li>
-        <li>Which libraries are good, and which are bad.</li>
-        <li>What code would be good, and what would be bad.</li>
-      </ul>
       <aside class="notes">
         <p>
           Or, to reduce it to the simplest form.
