--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 <a href="/GranularConfig/">Granular config</a> - September 21st 2016<br/>
 <a href="/InterfaceSegregationPHPNW/">Interface Segregation</a> - PHPNW, <a href="https://joind.in/event/php-north-west-2016/interface-segregation---the-forgotten-i-in-solid">October 1st, 2016</a><br/>
 
+<a href="/GoodOrBad/">Good or bad - making choice is hard</a> 14th March 2018 PHPSW<br/>
 
 <h2>Draft talks</h2>
 
@@ -35,12 +36,14 @@
 <a href="/InterfaceSegregationPortsmouth/">Interface Segregation</a> - Portsmouth, October 12th, 2017<br/>
 
 
-<a href="/GoodOrBad/">Good or bad - making choice is hard</a> <br/>
+<a href="/GoodOrBadv2/">Good or bad - making choice is hard v2</a> <br/>
 
 <a href="/SolidStructure/">Solid structure</a> <br/>
 
 <a href="/ReactJsIntro/">React JS intro</a> <br/>
 
+
+<a href="/DockerMistakes/">Docker Mistakes</a> <br/>
 
 
 <h2>PHP RFC</h2>
