Moved draft talk to given talks.

--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,12 @@
 
 <a href="/GoodOrBad/">Good or bad - making choice is hard</a> 14th March 2018 PHPSW<br/>
 
+
+<a href="/DockerMistakes/">Docker Mistakes</a> 10 October 2018 PHPSW<br/>
+
 <h2>Draft talks</h2>
 
-
 <a href="/InterfaceSegregationPortsmouth/">Interface Segregation</a> - Portsmouth, October 12th, 2017<br/>
-
 
 <a href="/GoodOrBadv2/">Good or bad - making choice is hard v2</a> <br/>
 
@@ -43,7 +44,6 @@
 <a href="/ReactJsIntro/">React JS intro</a> <br/>
 
 
-<a href="/DockerMistakes/">Docker Mistakes</a> <br/>
 
 
 <h2>PHP RFC</h2>
